tests/ui/fn/projection-impl-header-variants.stderr
error: lifetime may not live long enough
  --> $DIR/projection-impl-header-variants.rs:19:9
   |
LL | impl<'a, 'b> Convert<'a, 'b> for <&'b &'a () as MyTrait>::Assoc
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
...
LL |         s
   |         ^ method was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

